--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^17.0.2",
     "react-fontawesome": "^1.7.1",
     "react-particles-js": "^3.5.3",
+    "react-popupbox": "^2.0.8",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-typed": "^1.2.0",
