--- a/package.json
+++ b/package.json
@@ -6,16 +6,19 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "@hookform/resolvers": "^2.8.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
+    "emailjs-com": "^3.2.0",
     "gh-pages": "^3.2.3",
     "next": "^11.1.2",
     "particlesjs": "^2.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-fontawesome": "^1.7.1",
+    "react-hook-form": "^7.17.5",
     "react-particles-js": "^3.5.3",
     "react-popupbox": "^2.0.8",
     "react-router-dom": "^5.3.0",
