--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
     "emailjs-com": "^3.2.0",
-    "gh-pages": "^3.2.3",
     "next": "^11.1.2",
     "particlesjs": "^2.2.3",
     "react": "^17.0.2",
@@ -33,7 +32,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "homepage": "https://medina2021.github.io/React-Portfolio/"
   },
   "eslintConfig": {
     "extends": [
@@ -52,5 +52,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
+}
 }
