--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-example2",
+  "homepage": "https://medina2021.github.io/React-Portfolio/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -33,7 +34,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "homepage": "https://medina2021.github.io/React-Portfolio/"
   },
   "eslintConfig": {
     "extends": [
